--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  ipdb-0.7.tar.gz: de4d45985d0b3e403e85eb98c08f36f843d60f52
 sources:
-  "ipdb-0.7.tar.gz": de4d45985d0b3e403e85eb98c08f36f843d60f52
+  ipdb-0.8.zip: 35d7457863d7302304d79a686322a86c34aafe27
